# sl-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml
circuits/: Cargo.toml
circuits/src/: interface.rs  lib.rs
circuits/src/layered_circuit/: circuit.rs  gkr.rs  libra.rs  mod.rs  primitives.rs  utils.rs
fields/: Cargo.toml
fields/src/: lib.rs
iops/sum_check/: Cargo.toml
iops/sum_check/src/: interface.rs  lib.rs  padded_sumcheck.rs  primitives.rs  sumcheckable.rs  utils.rs
poly/: Cargo.toml
poly/benches/: barycentric_evaluation_benchmark.rs  dense_multilinear.rs
poly/src/: lib.rs  mle.rs  padded_poly.rs  utils.rs  vpoly.rs
transcript/: Cargo.toml
transcript/src/: lib.rs
