[workspace]
members = [
  "transcript",
  "poly",
  "iops/sum_check",
  "circuits"
]

resolver = "2"

[workspace.dependencies]
# Plonky3
p3-field = "0.2.0"
p3-challenger = "0.2.0"
p3-mersenne-31 = "0.2.0"
p3-keccak = "0.2.0"

# Workspace
transcript = { path = "./transcript" }
poly = { path = "./poly" }

# MISC
anyhow = "1.0.98"
rand = "0.8.5"
