[package]
name = "poly"
version = "0.1.0"
edition = "2024"

[dependencies]
# Plonky3
p3-challenger.workspace = true
p3-field.workspace = true
p3-mersenne-31.workspace = true
p3-goldilocks = "0.2.0"

# transcript
transcript = { path = "../transcript" }





[dev-dependencies]
criterion = "0.5.1"
multilinear_extensions = { git = "https://github.com/scroll-tech/ceno" }
ff_ext = { git = "https://github.com/scroll-tech/ceno" }
p3 = { git = "https://github.com/scroll-tech/ceno"}
rand.workspace = true


[[bench]]
name = "barycentric_evaluation_benchmark"
harness = false

[[bench]]
name = "dense_multilinear"
harness = false
